--- a/umt-training-course/jupyter-spark/pandas-dataset.ipynb
+++ b/umt-training-course/jupyter-spark/pandas-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "ca6a7b22",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "b9042333",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "b486477e",
    "metadata": {},
    "outputs": [
@@ -188,8 +188,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "0b262f44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- line: string (nullable = true)\n",
+      " |-- efficiency: long (nullable = true)\n",
+      " |-- animal_count: long (nullable = true)\n",
+      " |-- comment: string (nullable = true)\n",
+      " |-- source: long (nullable = true)\n",
+      "\n",
+      "+-----+----------+------------+-------------------------+------+\n",
+      "|line |efficiency|animal_count|comment                  |source|\n",
+      "+-----+----------+------------+-------------------------+------+\n",
+      "|line1|10        |43          |from NZ breeding         |1     |\n",
+      "|line2|20        |48          |local selection          |2     |\n",
+      "|line3|30        |32          |chinese x gascon crossing|3     |\n",
+      "|line4|40        |32          |stress sensible          |4     |\n",
+      "+-----+----------+------------+-------------------------+------+\n",
+      "\n",
+      "+-----------+-------+--------+--------+-----+----------+------------+----------------+------+\n",
+      "|animal_code|species|diet    |m_antiox|line |efficiency|animal_count|comment         |source|\n",
+      "+-----------+-------+--------+--------+-----+----------+------------+----------------+------+\n",
+      "|39         |line1  |standard|20      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|37         |line1  |standard|43      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|36         |line1  |standard|54      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|34         |line1  |standard|34      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|31         |line1  |antiox  |50      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|30         |line1  |standard|39      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|28         |line1  |antiox  |50      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|25         |line1  |standard|45      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|24         |line1  |antiox  |34      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|22         |line1  |standard|45      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|19         |line1  |antiox  |20      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|18         |line1  |standard|39      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|16         |line1  |antiox  |53      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|15         |line1  |antiox  |45      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|13         |line1  |standard|39      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|12         |line1  |standard|45      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|10         |line1  |standard|39      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|7          |line1  |antiox  |47      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|6          |line1  |standard|51      |line1|10        |43          |from NZ breeding|1     |\n",
+      "|4          |line1  |antiox  |33      |line1|10        |43          |from NZ breeding|1     |\n",
+      "+-----------+-------+--------+--------+-----+----------+------------+----------------+------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "+-----------+-------+------------+----------------+\n",
+      "|animal_code|species|animal_count|         comment|\n",
+      "+-----------+-------+------------+----------------+\n",
+      "|         31|  line1|          43|from NZ breeding|\n",
+      "|         28|  line1|          43|from NZ breeding|\n",
+      "|         24|  line1|          43|from NZ breeding|\n",
+      "|         19|  line1|          43|from NZ breeding|\n",
+      "|         16|  line1|          43|from NZ breeding|\n",
+      "|         15|  line1|          43|from NZ breeding|\n",
+      "|          7|  line1|          43|from NZ breeding|\n",
+      "|          4|  line1|          43|from NZ breeding|\n",
+      "|          1|  line1|          43|from NZ breeding|\n",
+      "|         40|  line2|          48| local selection|\n",
+      "|         38|  line2|          48| local selection|\n",
+      "|         35|  line2|          48| local selection|\n",
+      "|         32|  line2|          48| local selection|\n",
+      "|         27|  line2|          48| local selection|\n",
+      "|         23|  line2|          48| local selection|\n",
+      "|         20|  line2|          48| local selection|\n",
+      "|         14|  line2|          48| local selection|\n",
+      "|         11|  line2|          48| local selection|\n",
+      "|          8|  line2|          48| local selection|\n",
+      "|          3|  line2|          48| local selection|\n",
+      "+-----------+-------+------------+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "line = [(\"line1\",10,43,\"from NZ breeding\",1), \\\n",
+    "    (\"line2\",20,48, \"local selection\",2), \\\n",
+    "    (\"line3\",30,32,\"chinese x gascon crossing\",3), \\\n",
+    "    (\"line4\",40,32,\"stress sensible\",4) \\\n",
+    "  ]\n",
+    "\n",
+    "lineColumns = [\"line\",\"efficiency\",\"animal_count\",\"comment\",\"source\"]\n",
+    "lineDF = spark.createDataFrame(data=line, schema = lineColumns)\n",
+    "lineDF.printSchema()\n",
+    "lineDF.show(truncate=False)\n",
+    "\n",
+    "\n",
+    "joinedDF=sparkDF3.join(lineDF,sparkDF3.species ==  lineDF.line,\"inner\") \n",
+    "\n",
+    "joinedDF.show(truncate=False)\n",
+    "joinedDF.createOrReplaceTempView(\"EMP2\")\n",
+    "\n",
+    "spark.sql(\"select animal_code, species, animal_count,comment  from EMP2 \" +\n",
+    "          \"where diet='antiox'\").show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "eabb8685",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- provider_id: long (nullable = true)\n",
+      " |-- provider_name: string (nullable = true)\n",
+      " |-- access: string (nullable = true)\n",
+      "\n",
+      "+-----------+-----------------------------+------+\n",
+      "|provider_id|provider_name                |access|\n",
+      "+-----------+-----------------------------+------+\n",
+      "|1          |Noorsvaal University         |open  |\n",
+      "|2          |Lifegenx gmbh                |patent|\n",
+      "|3          |European breeding association|member|\n",
+      "|3          |Local farmers association    |member|\n",
+      "+-----------+-----------------------------+------+\n",
+      "\n",
+      "+-----------+-------+--------+--------+-----+----------+------------+----------------+------+-----------+--------------------+------+\n",
+      "|animal_code|species|diet    |m_antiox|line |efficiency|animal_count|comment         |source|provider_id|provider_name       |access|\n",
+      "+-----------+-------+--------+--------+-----+----------+------------+----------------+------+-----------+--------------------+------+\n",
+      "|39         |line1  |standard|20      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|37         |line1  |standard|43      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|36         |line1  |standard|54      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|34         |line1  |standard|34      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|31         |line1  |antiox  |50      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|30         |line1  |standard|39      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|28         |line1  |antiox  |50      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|25         |line1  |standard|45      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|24         |line1  |antiox  |34      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|22         |line1  |standard|45      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|19         |line1  |antiox  |20      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|18         |line1  |standard|39      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|16         |line1  |antiox  |53      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|15         |line1  |antiox  |45      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|13         |line1  |standard|39      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|12         |line1  |standard|45      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|10         |line1  |standard|39      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|7          |line1  |antiox  |47      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|6          |line1  |standard|51      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "|4          |line1  |antiox  |33      |line1|10        |43          |from NZ breeding|1     |1          |Noorsvaal University|open  |\n",
+      "+-----------+-------+--------+--------+-----+----------+------------+----------------+------+-----------+--------------------+------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "+-----------+--------------------+------+\n",
+      "|animal_code|       provider_name|access|\n",
+      "+-----------+--------------------+------+\n",
+      "|         39|Noorsvaal University|  open|\n",
+      "|         37|Noorsvaal University|  open|\n",
+      "|         36|Noorsvaal University|  open|\n",
+      "|         34|Noorsvaal University|  open|\n",
+      "|         31|Noorsvaal University|  open|\n",
+      "|         30|Noorsvaal University|  open|\n",
+      "|         28|Noorsvaal University|  open|\n",
+      "|         25|Noorsvaal University|  open|\n",
+      "|         24|Noorsvaal University|  open|\n",
+      "|         22|Noorsvaal University|  open|\n",
+      "|         19|Noorsvaal University|  open|\n",
+      "|         18|Noorsvaal University|  open|\n",
+      "|         16|Noorsvaal University|  open|\n",
+      "|         15|Noorsvaal University|  open|\n",
+      "|         13|Noorsvaal University|  open|\n",
+      "|         12|Noorsvaal University|  open|\n",
+      "|         10|Noorsvaal University|  open|\n",
+      "|          7|Noorsvaal University|  open|\n",
+      "|          6|Noorsvaal University|  open|\n",
+      "|          4|Noorsvaal University|  open|\n",
+      "+-----------+--------------------+------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    " \n",
+    "source = [(1,\"Noorsvaal University\",\"open\"), \\\n",
+    "    (2,\"Lifegenx gmbh\",\"patent\"), \\\n",
+    "    (3,\"European breeding association\",\"member\"), \\\n",
+    "    (3,\"Local farmers association\",\"member\")\\\n",
+    "  ]\n",
+    "\n",
+    "sourceColumns = [\"provider_id\",\"provider_name\",\"access\"]\n",
+    "sourceDF = spark.createDataFrame(data=source, schema = sourceColumns)\n",
+    "sourceDF.printSchema()\n",
+    "sourceDF.show(truncate=False)\n",
+    "\n",
+    "\n",
+    "joinedDF2=joinedDF.join(sourceDF,joinedDF.source ==  sourceDF.provider_id,\"inner\") \n",
+    "\n",
+    "joinedDF2.show(truncate=False)\n",
+    "\n",
+    "joinedDF2.createOrReplaceTempView(\"EMP3\")\n",
+    "\n",
+    "spark.sql(\"select animal_code,provider_name, access from EMP3 \" +\n",
+    "          \"where source in (1,2)\").show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b372c42a",
    "metadata": {},
    "outputs": [],
    "source": []
