ML sparl example

--- a/umt-training-course/jupyter-spark/pyspark-csv.ipynb
+++ b/umt-training-course/jupyter-spark/pyspark-csv.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "[536, 492, 347, 19, 924]"
+       "[123, 649, 59, 553, 322]"
       ]
      },
      "execution_count": 1,
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "acec3e4b",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "0fe16bfe",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "25e0afde",
    "metadata": {
     "scrolled": true
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "0062da26",
    "metadata": {},
    "outputs": [
@@ -250,19 +250,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "id": "927af39d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
+    "# write csv\n",
+    "\n",
+    "\n",
+    "import os\n",
+    "import shutil\n",
+    "dir_path=\"activity-part\"\n",
+    "\n",
+    "try:\n",
+    "     shutil.rmtree(dir_path)\n",
+    "except OSError as e:\n",
+    "    print(\"Error: %s : %s\" % (dir_path, e.strerror))\n",
+    "    \n",
+    "    \n",
     "dfFilter.write.option(\"header\",True) \\\n",
-    " .csv(outputfile)"
+    " .csv(dir_path)\n",
+    "\n",
+    "try:\n",
+    "     shutil.rmtree(outputfile)\n",
+    "except OSError as e:\n",
+    "    print(\"Error: %s : %s\" % (dir_path, e.strerror))\n",
+    "    \n",
+    "\n",
+    "dfFilter.repartition(1).write.option(\"header\",True).csv(outputfile)\n",
+    "print(\"done\") "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c155a4df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c563fcf4",
    "metadata": {},
    "outputs": [],
    "source": []
