--- a/umt-training-course/jupyter-bash/bash_first_step1.ipynb
+++ b/umt-training-course/jupyter-bash/bash_first_step1.ipynb
@@ -5,12 +5,181 @@
    "id": "3abeba8e",
    "metadata": {},
    "source": [
-    "How to use Linux command line  with BASH. examples - find OS"
+    "How to use Linux command line  with BASH"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93ecefa6",
+   "metadata": {},
+   "source": [
+    "Basic directories and File manipulation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "6aa5bd7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 32\n",
+      "-rwxrwxrwx 1 jovyan users 8463 Jun 21 13:07 \u001b[0m\u001b[01;32mbash_first_step1.ipynb\u001b[0m\n",
+      "-rwxrwxrwx 1   1001  1001   40 Jun  7 13:23 \u001b[01;32mbuild.sh\u001b[0m\n",
+      "drwxr-xr-x 2 jovyan users 4096 Jun 21 13:02 \u001b[01;34mdata1\u001b[0m\n",
+      "-rwxrwxrwx 1   1001  1001  287 Jun  7 13:54 \u001b[01;32mDockerfile\u001b[0m\n",
+      "-rw-rw-r-- 1   1001  1001  283 Jun 21 12:45 README.md\n",
+      "drwxr-xr-x 2 jovyan users 4096 Jun 21 13:01 \u001b[01;34mtest\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls -l "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5b4e0f98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a test\n",
+      "total 12K\n",
+      "8.0K -rw-r--r-- 1 jovyan users 7.4K Jun 21 13:01 nohelp.txt\n",
+      "4.0K -rw-r--r-- 1 jovyan users   15 Jun 21 13:08 test.txt\n",
+      "help.txt  nohelp.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "mkdir -p  test\n",
+    "echo \"this is a test\" > test/test.txt\n",
+    "cat test/test.txt\n",
+    "\n",
+    "cd test && ls -shl\n",
+    "cd ..\n",
+    "rm test/test.txt\n",
+    "ls --help > test/help.txt\n",
+    "ls test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d4e068ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 8.0K\n",
+      "8.0K -rw-r--r-- 1 jovyan users 7.4K Jun 21 13:08 nohelp.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "mv test/help.txt test/nohelp.txt\n",
+    "ls -shl test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a2b10844",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sort entries alphabetic\u001b[01;31m\u001b[Kall\u001b[m\u001b[Ky if none of -cftuvSUX nor --sort is specified.\n",
+      "  -a, --\u001b[01;31m\u001b[Kall\u001b[m\u001b[K                  do not ignore entries starting with .\n",
+      "  -A, --almost-\u001b[01;31m\u001b[Kall\u001b[m\u001b[K           do not list implied . and ..\n",
+      "  -s, --size                 print the \u001b[01;31m\u001b[Kall\u001b[m\u001b[Kocated size of each file, in blocks\n",
+      "  -X                         sort alphabetic\u001b[01;31m\u001b[Kall\u001b[m\u001b[Ky by entry extension\n",
+      "or available loc\u001b[01;31m\u001b[Kall\u001b[m\u001b[Ky via: info '(coreutils) ls invocation'\n"
+     ]
+    }
+   ],
+   "source": [
+    "grep  \"all\" test/nohelp.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dff5586f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usage: ls [OPTION]... [FILE]...\n",
+      "List information about the FILEs (the current directory by default).\n"
+     ]
+    }
+   ],
+   "source": [
+    "head -n 2 test/nohelp.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6d7c4638",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full documentation at: <https://www.gnu.org/software/coreutils/ls>\n",
+      "or available locally via: info '(coreutils) ls invocation'\n"
+     ]
+    }
+   ],
+   "source": [
+    "tail -n 2 test/nohelp.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1f01ba07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found  ./test/nohelp.txt \n"
+     ]
+    }
+   ],
+   "source": [
+    " find ./ -name \"*.txt\" -type f -print0 | xargs -0 -I p1 bash -c \" echo \\\"found \\\" p1 \\\"\\\" ; \""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfa0e1e2",
+   "metadata": {},
+   "source": [
+    "Find OS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "8c377a9c",
    "metadata": {},
    "outputs": [
@@ -28,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "025bbed8",
    "metadata": {},
    "outputs": [
@@ -47,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "69f7f89f",
    "metadata": {},
    "outputs": [
@@ -76,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "0e033522",
    "metadata": {},
    "outputs": [
@@ -96,31 +265,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "b315d13a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] 67\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": []
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mkdir -p data1 & echo \"any-data\" > data1/file.txt"
+    "mkdir -p data1 \n",
+    "echo \"any-data\" > data1/file.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "38399aec",
    "metadata": {},
    "outputs": [
@@ -128,19 +284,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] 68\n",
+      "[1] 271\n",
       "/home/jovyan/work\n",
       ".:\n",
-      "total 20\n",
-      "-rwxrwxrwx 1   1001  1001   40 Jun  7 13:23 \u001b[0m\u001b[01;32mbuild.sh\u001b[0m\n",
-      "drwxr-xr-x 2 jovyan users 4096 Jun  7 14:17 \u001b[01;34mdata1\u001b[0m\n",
+      "total 32\n",
+      "-rwxrwxrwx 1 jovyan users 8408 Jun 21 13:08 \u001b[0m\u001b[01;32mbash_first_step1.ipynb\u001b[0m\n",
+      "-rwxrwxrwx 1   1001  1001   40 Jun  7 13:23 \u001b[01;32mbuild.sh\u001b[0m\n",
+      "drwxr-xr-x 2 jovyan users 4096 Jun 21 13:09 \u001b[01;34mdata1\u001b[0m\n",
       "-rwxrwxrwx 1   1001  1001  287 Jun  7 13:54 \u001b[01;32mDockerfile\u001b[0m\n",
-      "-rw-rw-r-- 1   1001  1001  169 Jun  7 14:12 README.md\n",
-      "-rw-r--r-- 1 jovyan users 3610 Jun  7 14:17 Untitled.ipynb\n",
+      "-rw-rw-r-- 1   1001  1001  283 Jun 21 12:45 README.md\n",
+      "drwxr-xr-x 2 jovyan users 4096 Jun 21 13:08 \u001b[01;34mtest\u001b[0m\n",
       "\n",
       "./data1:\n",
       "total 4\n",
-      "-rw-r--r-- 1 jovyan users 9 Jun  7 14:17 file.txt\n",
+      "-rw-r--r-- 1 jovyan users 9 Jun 21 13:09 file.txt\n",
+      "\n",
+      "./test:\n",
+      "total 8\n",
+      "-rw-r--r-- 1 jovyan users 7575 Jun 21 13:08 nohelp.txt\n",
       "[1]+  Done                    pwd\n"
      ]
     }
@@ -151,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "76edd5ff",
    "metadata": {},
    "outputs": [
@@ -159,7 +320,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3758ba12c896\n"
+      "af4a7a69424b\n"
      ]
     }
    ],
@@ -169,18 +330,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a14dd80a",
+   "execution_count": 19,
+   "id": "b029945c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " well done ! I LOVE DOCKER  AND  JUPYTER \n"
+     ]
+    }
+   ],
    "source": [
-    "sudo -i chmod -R 777 ./"
+    "DOCKER=\"I LOVE DOCKER\"\n",
+    "JUPYTER=\"AND  JUPYTER \"\n",
+    "echo \" well done ! $DOCKER  $JUPYTER\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b029945c",
+   "id": "00f1179a",
    "metadata": {},
    "outputs": [],
    "source": []
